syntax = "proto3";
service GrpcSecretServer {
  // Set Master credentials
  rpc SetMasterCredentials (SetMasterCredentialsRequest) returns (SecretServerReply) {}
  rpc Encrypt (EncryptRequest) returns (EncryptReply) {}
  rpc Decrypt (DecryptRequest) returns (DecryptReply) {}
  rpc GetValue (GetValueRequest) returns (GetValueReply) {}
}


// The request message containing the credentials in json string
message SetMasterCredentialsRequest {
  map<string,string> credentials = 1;
}

// The response message
message SecretServerReply {
  int32 status_code = 1;
  string error_msg = 2;
  repeated string error_backtrace = 3;
}

// Encrypt request
message EncryptRequest {
  string plaintext = 1;
}
// Encrypt reply
message EncryptReply {
  int32 status_code = 1;
  string error_msg = 2;
  repeated string error_backtrace = 3;
  string encrypted_string = 4;
}

// Decrypt request
message DecryptRequest {
  string encrypted_string = 1;
}
// Decrypt reply
message DecryptReply {
  int32 status_code = 1;
  string error_msg = 2;
  repeated string error_backtrace = 3;
  string plaintext = 4;
}

// GetValue request
message GetValueRequest {
  string key = 1;
}
// GetValue reply
message GetValueReply {
  int32 status_code = 1;
  string error_msg = 2;
  repeated string error_backtrace = 3;
  string string_value = 4;
}


